--- a/index.html
+++ b/index.html
@@ -103,8 +103,8 @@ h1 {
 <div>
   
 <p><img src="WordArt.jpeg" alt="Pineapple" width=100 height=100 style="float: right;margin-left:15px;">
-<h2>GIRI PRASATH V</h2>
-<p>datatrucktech@gmail.com <br> Mob: +91 - 9787707894</p>
+<h2>VIGNESH CS</h2>
+<p>csv740@gmail.com <br> Mob: +91 - 8056295120</p>
     </p>
   </div>
 <hr>
