--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@ h1 {
 <div class="main">
 <div>
   
-<p><img src="WordArt.jpeg" alt="Pineapple" width=100 height=100 style="float: right;margin-left:15px;">
+<p><img src="vignesh.jpg" alt="Vignesh CS" width=100 height=100 style="float: right;margin-left:15px;">
 <h2>VIGNESH CS</h2>
 <p>csv740@gmail.com <br> Mob: +91 - 8056295120</p>
     </p>
