--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <title>VIGNESH CS </title>
   <meta charset="utf-8">
-  <title>try</title>
   <link rel="stylesheet" href="try.css">
 </head>
 <body>
@@ -16,15 +16,15 @@
         <p class="content1"><img src="vignesh.jpg" alt="Vignesh CS" width=100 height=100 style="float: left;margin-left:15px;"></p>
         <div class="content2">
           <p><b>DATA SCIENCE SKILL SET</b></p>
-          <p><b>Programming languages : </b>Python, R, HTML, CSS, JavaScript, JD Edwards, Core Java, SQL<br> <b>Libraries : </b>Python - Sklearn, seaborn, numpy, pandas. R - ggplot2, caTools </p>
-          <p><b>Algorithms &amp; Statistics : </b>K Means Clustering, KNN, Decision Trees, Random Forests, Linear Regression, Logistic Regression, Naive Bayes, Cosine similarity, Pairwise Distances, CountVector(BOW), Tf-Idf  </p>
+          <p><b>Programming languages : </b>Python, R, HTML, CSS, JavaScript, Core Java, SQL<br> <b>Libraries : </b>Python - Sklearn, seaborn, numpy, pandas. R - ggplot2, caTools <br>
+          <b>Algorithms &amp; Statistics : </b>K Means Clustering, KNN, Decision Trees, Random Forests, Linear Regression, Logistic Regression, Naive Bayes, Cosine similarity, Pairwise Distances, CountVector(BOW), Tf-Idf  </p>
         </div>
       </div>
     </div>
   </div>
   <hr class="afterds">
   <div class="d2">
-    <h3 class="margin">DATA SCIENCE PROJECTS PORTFOLIO</h3>
+    <h3 class="margin">DATA SCIENCE PROJECTS</h3>
     <p>A Display of the Machine Learning Models developed as part of my Data Scientist Journey.<br>
       Click on the Title of the project to view the complete code, analysis, model and findings.</p>
       <hr>
@@ -33,7 +33,7 @@
         <img src="mall.jpg" alt="Add to cart" height="100" width="100" >
       </div>
         <div class="in-topic">
-        <h3 ><Bold>Mall Customer Grouping</Bold>
+        <h3 ><Bold>Mall Customer Grouping Model</Bold>
           <a href="Mall Customers.html"><h6>KMeans Clustering</h6></a></h3>
           <p >KMeans clustering used to group the customer based on their Annual Income and Amount Spend in the mall</p>
           <a href="Mall Customers.html"><h6 >Hierarchical Clustering</h6></a></h3>
@@ -43,10 +43,10 @@
         <hr>
         <div class="topic">
           <div class="in1">
-          <img src="chatbot.jpg" alt="Chat Bot" height="100" width="100" >
+          <img src="chatbot.png" alt="Chat Bot" height="100" width="100" >
         </div>
           <div class="in-topic">
-          <h3 ><Bold>Mall Customer Grouping</Bold><a href="Chat Bot for JDE Tables.html"><h6>Chat Bot</h6></a></h3>
+          <h3 ><Bold>Chat Bot Model</Bold><a href="Chat Bot for JDE Tables.html"><h6>Chat Bot</h6></a></h3>
           <p >NLP modeling for creating a ML program to give predicted Object Name. User can enter their queries either by voice or text.</p>
         </div>
         </div>
@@ -54,19 +54,38 @@
         <div class="topic">
           <div class="in1">
           <img src="suv.jpg" alt="SUV" height="100" width="100" >
-        </div>
+        	</div>
           <div class="in-topic">
-          <h3 ><Bold>Mall Customer Grouping</Bold><a href="Social Network Ads.html"><h6>Social Network Ads Predictor</h6></a></h3>
+          <h3 ><Bold>Advertise Predictor Model</Bold><a href="Social Network Ads.html"><h6>Social Network Ads Predictor</h6></a></h3>
           <p >A Ads Predictor Model built on 4 different Classification algorithms and the accuracies compared. This predictor is an important ML Feature for predicting whether the user will buy SUV or not and to spend the budget wisely on providing offers.</p>
         </div>
         </div>
-        <div>
+	<div class="topic">
+          <div class="in1">
+          <img src="rating.png" alt="Rating" height="100" width="100" >
+        	</div>
+          <div class="in-topic">
+          <h3 ><Bold>Web Scraping & Review predictor Model</Bold><a href="ScarpingAndSentimentalAnalysis.html"><h6>Web Scarping & Sentimental Analyser</h6></a></h3>
+          <p >BeautifulSoup used to scrap all HTML page and parse the document to text, with the text by using the TextBlob we can able to analyse the text and by using it we can able to get the ratings of the product.</p>
+        </div>
+        </div>
+	<div class="topic">
+          <div class="in1">
+          <img src="spam.png" alt="Rating" height="100" width="100" >
+        	</div>
+          <div class="in-topic">
+          <h3 ><Bold>Spam predictor Model</Bold><a href="SpamPredictor.html"><h6>SMS Spam Predictor</h6></a></h3>
+          <p >Naive Bayes Algorithms are use to predict the spam message more accurately, and the model is trained is such a way that it can easily separate Spam messages from Ham message.</p>
+        </div>
+        </div>
+        
+</div>
+<div class="content3">
         <h3><u>Tools and IDE</u></h3>
         <p><b>Visualization tools :</b> Python SeaBorn,Python Plotly, R ggplot, R ggplot2 </p>
-      <p><b>ERP tools :</b> JDE</p>
+      <p><b>ERP tools :</b> JD Edwards</p>
         <p><b>IDE :</b> Atom, Microsoft Webmatrix, Anaconda, Pycharm, R Studio</p>
       </div>
-		</div>
 
 		</body>
 		</html>
