--- a/index.html
+++ b/index.html
@@ -83,12 +83,15 @@
 
         
 </div>
+<hr class="afterds">
 <div class="content3">
+<div class="content31">
         <h3><u>Tools and IDE</u></h3>
         <p><b>Visualization tools :</b> Python SeaBorn,Python Plotly, R ggplot, R ggplot2 </p>
       <p><b>ERP tools :</b> JD Edwards</p>
         <p><b>IDE :</b> Atom, Microsoft Webmatrix, Anaconda, Pycharm, R Studio</p>
       </div>
+</div>
 
 		</body>
 		</html>
