--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <div class="head">
       <h2 class="title">VIGNESH CS<h4>Data Scientist</h4></h2>
       <hr>
-      <p class="contact"><span>Mobile :</span>  +91 - 8056295120<span>Email :</span>  csv740@gmail.com </p>
+      <p class="contact"><span>Mobile :</span>  +91 - 8056295120<span>Email :</span> csv740@gmail.com </p>
+	</p>
       <hr>
       <div class="content-out">
         <p class="content1"><img src="vignesh.jpg" alt="Vignesh CS" width=100 height=100 style="float: left;margin-left:15px;"></p>
@@ -80,6 +81,16 @@
           <p >Naive Bayes Algorithms are use to predict the spam message more accurately, and the model is trained is such a way that it can easily separate Spam messages from Ham message.</p>
         </div>
         </div>
+<div class="topic">
+          <div class="in1">
+          <img src="resumeScan.png" alt="Doc Scanning" height="100" width="100" >
+        	</div>
+          <div class="in-topic">
+          <h3 ><Bold>Document Scanning Model</Bold><a href="resumeScanner.html"><h6>Resume Scanning for shortlisting</h6></a></h3>
+          <p>By using the Tessarct library model are created to scan the PDF file and convert to text file, so that while recruiting process candidates can be filtered easily.</p>
+        </div>
+        </div>
+<hr>
 
         
 </div>
