--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <h3 ><Bold>Mall Customer Grouping Model</Bold>
           <a href="Mall Customers.html"><h6>KMeans Clustering</h6></a></h3>
           <p >KMeans clustering used to group the customer based on their Annual Income and Amount Spend in the mall</p>
-          <a href="Mall Customers.html"><h6 >Hierarchical Clustering</h6></a></h3>
+          <a href="Mall Customer- HC.html"><h6 >Hierarchical Clustering</h6></a></h3>
           <p >Hierarchical clustering used to group the customer based on their Annual Income and Amount Spend in the mall.</p>
         </div>
         </div>
