--- a/index.html
+++ b/index.html
@@ -83,6 +83,17 @@
         </div>
 	
         <hr>
+	<div class="topic">
+          <div class="in1">
+          <img src="salary.png" alt="Salary Analysis" height="100" width="100" >
+        	</div>
+          <div class="in-topic">
+          <h3 ><Bold>Salary Predictive Model</Bold><a href="Regression.html"><h6>Salary predicting for new Candidate</h6></a></h3>
+          <p>By using the Regression model are created to provide the predicted salary of the new employee based on his experience and the existing employees salary and their experience.</p>
+        </div>
+        </div>
+	
+        <hr>
         <div class="topic">
           <div class="in1">
           <img src="chatbot.png" alt="Chat Bot" height="100" width="100" >
