--- a/index.html
+++ b/index.html
@@ -92,6 +92,16 @@
           <p>By using the Regression model are created to provide the predicted salary of the new employee based on his experience and the existing employees salary and their experience.</p>
         </div>
         </div>
+	<hr>
+<div class="topic">
+          <div class="in1">
+          <img src="diabetes.png" alt="Rating" height="100" width="100" >
+        	</div>
+          <div class="in-topic">
+          <h3 ><Bold>Diabetes Patient predictor Model</Bold><a href="DiabetesPatient.html"><h6>Diabetes Predictor</h6></a></h3>
+          <p>Linear Regression algorithm is used to predict the diabetes patients from the Patient dataset of affected patient, by using SciKit-Learn and Pandas for predicting the Diabetes Patient.</p>
+        </div>
+        </div>
 	
         
 
