--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
         	</div>
           <div class="in-topic">
           <h3 ><Bold>Diabetes Patient predictor Model</Bold><a href="DiabetesPatient.html"><h6>Diabetes Predictor</h6></a></h3>
-          <p>Support Vector Machine algorithm is used to predict the diabetes patients from the Patient dataset of affected patient, by using SciKit-Learn and Pandas for predicting the Diabetes Patient.</p>
+          <p>Support Vector Machine Classifier algorithm is used to predict the diabetes patients from the Patient dataset of affected patient, by using SciKit-Learn and Pandas for predicting the Diabetes Patient.</p>
         </div>
         </div>
 	
