--- a/index.html
+++ b/index.html
@@ -102,6 +102,16 @@
           <p>Support Vector Machine Classifier algorithm is used to predict the diabetes patients from the Patient dataset of affected patient, by using SciKit-Learn and Pandas-ML ModelFrame Library for predicting the Diabetes Patient.</p>
         </div>
         </div>
+<hr>
+<div class="topic">
+          <div class="in1">
+          <img src="churn.png" alt="Customer Churn" height="100" width="100" >
+        	</div>
+          <div class="in-topic">
+          <h3 ><Bold>Customer Churn Model</Bold><a href="ChurnCustomerPredicting.html"><h6>Predicting Customer leaving the Bank</h6></a></h3>
+          <p>By using the Artificial Neural Network we are predicting the customer that are going to leave the organization, this predictions are made based on the previous records of other customer left the bank for some reasons.</p>
+        </div>
+        </div>
 	
         
 
