--- a/index.html
+++ b/index.html
@@ -64,6 +64,16 @@
 <hr>
 	<div class="topic">
           <div class="in1">
+          <img src="chat.png" alt="Rating" height="100" width="100" >
+        	</div>
+          <div class="in-topic">
+          <h3 ><Bold>Chat Bot</Bold><a href="Chat Bot for JDE Tables.html"><h6>Text and Speech recognition</h6></a></h3>
+          <p>Created a smaple model for recognizing the table description either through text or through speech so that model can display the Table ID.</p>
+        </div>
+        </div>
+<hr>
+	<div class="topic">
+          <div class="in1">
           <img src="spam.png" alt="Rating" height="100" width="100" >
         	</div>
           <div class="in-topic">
