--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 <hr>
 	<div class="topic">
           <div class="in1">
-          <img src="chatbot.png" alt="Rating" height="100" width="100" >
+          <img src="chatbot.png" alt="ChatBot" height="100" width="100" >
         	</div>
           <div class="in-topic">
           <h3 ><Bold>Chat Bot</Bold><a href="Chat Bot for JDE Tables.html"><h6>Text and Speech recognition</h6></a></h3>
