--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
   <div class="d1">
     <div class="head">
-      <h2 class="title">VIGNESH CS<h4>Data Scientist</h4></h2>
+      <h2 class="title">VIGNESH CS<h4></h4></h2>
       <hr>
       <p class="contact"><span>Mobile :</span>  +91 - 8056295120<span>Email :</span> csv740@gmail.com </p>
 	</p>
@@ -24,8 +24,8 @@
     </div>
   </div>
   <hr class="afterds">
-  <div class="d2">
-    <h3 class="margin">DATA SCIENCE PROJECTS</h3>
+  <div class="d">
+    <h3 class="margin">POC </h3>
     <p>A Display of the Machine Learning Models developed as part of my Data Scientist Journey.<br>
       Click on the Title of the project to view the complete code, analysis, model and findings.</p>
       <hr>
