--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
   <div class="d1">
     <div class="head">
-      <h2 class="title">VIGNESH CS<h4></h4></h2>
+      <h2 class="title">VIGNESH CS<h4>Developer</h4></h2>
       <hr>
       <p class="contact"><span>Mobile :</span>  +91 - 8056295120<span>Email :</span> csv740@gmail.com </p>
 	</p>
