--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         	</div>
           <div class="in-topic">
           <h3 ><Bold>Advertise Predictor Model</Bold><a href="Social Network Ads.html"><h6>Social Network Ads Predictor</h6></a></h3>
-          <p >A Ads Predictor Model built on 4 different Classification algorithms and the accuracies compared. This predictor is an important ML Feature for predicting whether the user will buy SUV or not and to spend the budget wisely on providing offers.</p>
+          <p >Ads Predictor Model built on 4 different Classification algorithms and the accuracies compared. This predictor is an important ML Feature for predicting whether the user will buy SUV or not and to spend the budget wisely on providing offers.</p>
         </div>
         </div>
 <hr>
