--- a/index.html
+++ b/index.html
@@ -1,1 +1,56 @@
+<!DOCTYPE html>
+<html>
+<head>
+  <title>VIGNESH CS </title>
+  <meta charset="utf-8">
+  <link rel="stylesheet" href="try.css">
+</head>
+<body>
+  <div class="d1">
+    <div class="head">
+      <h2 class="title">VIGNESH CS<h4>MSc Data Science</h4></h2>
+      <hr>
+      <p class="contact"><span>Mobile :</span>  +91 - 8056295120<span>Email :</span> csv740@gmail.com </p>
+	</p>
+      <hr>
+      <div class="content-out">
+        <p class="content1"><img src="vignesh.jpg" alt="Vignesh CS" width=100 height=100 style="float: left;margin-left:15px;"></p>
+        <div class="content2">
+          <p><b>DATA SCIENCE SKILL SET</b></p>
+          <p><b>Programming languages : </b>R Programming,Python, HTML, CSS, SQL<br> <b>Libraries : </b>R - ggplot2, survival, GGally<br>
+          <!--<b>Algorithms &amp; Statistics : </b>K Means Clustering, KNN, Decision Trees, Random Forests, Linear Regression, Logistic Regression, Naive Bayes, Cosine similarity, Pairwise Distances, CountVector(BOW), Tf-Idf  </p> -->
+        </div>
+      </div>
+    </div>
+  </div>
+  <hr class="afterds">
+  	<div class="d">
+    		<h3 class="margin">Survival Ananlysis Modeling:</h3>
+    		<p>A Display of the Survival Ananlysis Model developed as part of my Data Scientist Journey.<br>
+      		Click on the Title of the project to view the complete code, analysis, model and findings.</p>
+      		<hr>
+      			<div class="topic">
+        		<div class="in1">
+        			<img src="mall.jpg" alt="Add to cart" height="100" width="100" >
+      			</div>
+        		<div class="in-topic">
+        			<h3 ><Bold>Umemployment Analysis Between Genders</Bold>
+          			<a href="unemployement_female_male.nb.html"><h6>Kaplan- Meier Estimation, 95% CI and Log-rank Test</h6></a></h3>
+          			<p>By comparing both the gender we could see that which group of gender has higher chances of getting the job back after being unemployed for a period of time.</p>
+          		</div>
+        		</div>
+        	<hr>
+        </div>
+<hr class="afterds">
+<div class="content3">
+<div class="content31">
+        <h3><u>Tools and IDE</u></h3>
+        <p><b>Visualization tools :</b> Python SeaBorn,Python Plotly, R ggplot, R ggplot2 </p>
+      <p><b>ERP tools :</b> JD Edwards</p>
+        <p><b>IDE :</b> Atom, Microsoft Webmatrix, Anaconda, Pycharm, R Studio</p>
+      </div>
+</div>
+
+		</body>
+		</html>
 
