--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	</p>
       <hr>
       <div class="content-out">
-        <p class="content1"><img src="https://img2.pngio.com/unemployment-icon-png-1-png-image-unemployment-png-512_427.png" alt="Vignesh CS" width=100 height=100 style="float: left;margin-left:15px;"></p>
+        <p class="content1"><img src="vignesh.jpg" alt="Vignesh CS" width=100 height=100 style="float: left;margin-left:15px;"></p>
         <div class="content2">
           <p><b>DATA SCIENCE SKILL SET</b></p>
           <p><b>Programming languages : </b>R Programming,Python, HTML, CSS, SQL<br> <b>Libraries : </b>R - ggplot2, survival, GGally<br>
@@ -31,7 +31,7 @@
       		<hr>
       			<div class="topic">
         		<div class="in1">
-        			<img src="mall.jpg" alt="Add to cart" height="100" width="100" >
+        			<img src="https://img2.pngio.com/unemployment-icon-png-1-png-image-unemployment-png-512_427.png" alt="Umemployment" height="100" width="100" >
       			</div>
         		<div class="in-topic">
         			<h3 ><Bold>Umemployment Analysis Between Genders</Bold>
