--- a/index.html
+++ b/index.html
@@ -39,6 +39,16 @@
           			<p>By comparing both the gender we could see that which group of gender has higher chances of getting the job back after being unemployed for a period of time.</p>
           		</div>
         		</div>
+			<div class="topic">
+        		<div class="in1">
+        			<img src="leukemia.png" alt="Umemployment" height="100" width="100" >
+      			</div>
+        		<div class="in-topic">
+        			<h3 ><Bold>Leukemia patients Analysis</Bold>
+          			<a href="leukemia_analysis.nb.html"><h6>Exponential model vs Weibull Model</h6></a></h3>
+          			<p>By comparing the patients who take 6-MP vs Placeba with 2 type of model and we come to conclusion that patients who are taking 6-MP treatment has higher surviving rate than Placeba treatment, and both the model assumptions are achieved, whereas only in weibull model we could see a slight violations. </p>
+          		</div>
+        		</div>
         	<hr>
         </div>
 <hr class="afterds">
