--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         		</div>
 			<div class="topic">
         		<div class="in1">
-        			<img src="leukemia.png" alt="Umemployment" height="100" width="100" >
+        			<img src="leukemia.png" alt="Leukemia" height="100" width="100" >
       			</div>
         		<div class="in-topic">
         			<h3 ><Bold>Leukemia patients Analysis</Bold>
