--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@
         		<div class="in-topic">
         			<h3 ><Bold>Leukemia patients Analysis</Bold>
           			<a href="leukemia_analysis.nb.html"><h6>Exponential model vs Weibull Model</h6></a></h3>
-          			<p>By comparing the patients who take 6-MP vs Placeba with 2 type of model and we come to conclusion that patients who are taking 6-MP treatment has higher surviving rate than Placeba treatment, and both the model assumptions are achieved, whereas only in weibull model we could see a slight violations. </p>
+          			<p>By comparing the patients who take 6-MP vs Placeba with 2 type of model and we come to conclusion that patients who are taking 6-MP treatment has higher surviving rate than Placeba treatment, 
+				and both the model assumptions are achieved, whereas only in weibull model we could see a slight violations. </p>
           		</div>
         		</div>
         	<hr>
