--- a/index.html
+++ b/index.html
@@ -49,6 +49,16 @@
           			<p>By comparing the patients who take 6-MP vs Placeba with 2 type of model and we come to conclusion that patients who are taking 6-MP treatment has higher surviving rate than Placeba treatment, 
 				and both the model assumptions are achieved, whereas only in weibull model we could see a slight violations. </p>
           		</div>
+			</div>
+			<div class="topic">
+        		<div class="in1">
+        			<img src="liverresection.png" alt="LiverResection" height="100" width="100" >
+      			</div>
+			<div class="in-topic">
+        			<h3 ><Bold>Liver Resection Analysis</Bold>
+          			<a href="liver_Resection_Analysis.nb.html"><h6>Non- and Semi- Parametric</h6></a></h3>
+          			<p>Stitistical Analysis of the liver data using the Non-Parametic and Semi-Parametric estimation </p>
+          		</div>
         		</div>
         	<hr>
         </div>
