--- a/index.html
+++ b/index.html
@@ -31,6 +31,16 @@
       		<hr>
       			<div class="topic">
         		<div class="in1">
+        			<img src="Melanoma.png" alt="Melanoma" height="100" width="100" >
+      			</div>
+        		<div class="in-topic">
+        			<h3 ><Bold>Melanoma patients Analysis</Bold>
+          			<a href="melanoma_Analysis.nb.html"><h6>Weibull AFT Models with Spline: <b> B-Splines & P-Spline</b></h6></a></h3>
+          			<p>Comparing the Melanoma patients but using Non- and Semi Parametric approach and come to conclusion that Males are much affected than the Females and the Survival rates of Males goes steeply downwards than compared to males, and Visualized using Spline Semi- parametric models </p>
+          		</div>
+			</div>
+			<div class="topic">
+        		<div class="in1">
         			<img src="unemployment.png" alt="Un-employment" height="100" width="100" >
       			</div>
         		<div class="in-topic">
