--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   	<div class="d">
     		<h3 class="margin">Survival Ananlysis Modeling:</h3>
     		<p>A Display of the Survival Ananlysis Model developed as part of my Data Scientist Journey.<br>
-      		Click on the Title of the project to view the complete code, analysis, model and findings.</p>
+      		Click on the Models descriptions to view the complete code, analysis, model and findings.</p>
       		<hr>
       			<div class="topic">
         		<div class="in1">
