--- a/index.html
+++ b/index.html
@@ -29,6 +29,16 @@
     		<p>A Display of the Survival Ananlysis Model developed as part of my Data Scientist Journey.<br>
       		Click on the Model descriptions to view the complete code, analysis, model and findings.</p>
       		<hr>
+			<div class="topic">
+        		<div class="in1">
+        			<img src="kidney.png" alt="Kidney" height="100" width="100" >
+      			</div>
+        		<div class="in-topic">
+        			<h3 ><Bold>Kidney Surgery Analysis</Bold>
+          			<a href="kidney_surgery_analysis.nb.html"><h6>Cox Proportional Hazard Model</h6></a></h3>
+          			<p>Compared the Kidney surgery patients using the COXPH model and analyzed the interaction of the categorical covariates and estimated it's benefits and benefits of Stratification </p>
+          		</div>
+			</div>
       			<div class="topic">
         		<div class="in1">
         			<img src="Melanoma.png" alt="Melanoma" height="100" width="100" >
