--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         			<img src="pink.png" alt="Melanoma" height="100" width="100" >
       			</div>
         		<div class="in-topic">
-        			<h3 ><Bold>Melanoma patients Analysis</Bold>
+        			<h3 ><Bold>Germany Breast Cancer patients Analysis</Bold>
           			<a href="glm_cox_gbsg2.nb.html"><h6> Genelarized linear model vs Cox PH model with constant baseline Hazard(λo)</h6></a></h3>
           			<p>Comparing the breast cancer patient using the GLM and CoxPH model and then finally diagnosing the full COX model using residuals</p>
           		</div>
